--- a/src/Components/MainMenuStack/StartStack/MainGameStack/MyModels/MyModelsHolder/MyModelsHolder.module.css
+++ b/src/Components/MainMenuStack/StartStack/MainGameStack/MyModels/MyModelsHolder/MyModelsHolder.module.css
@@ -2,11 +2,12 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    justify-content: center;
     width: 229px;
     height: 441px;
     position: absolute;
+    left: 29.15%;
+    top: 6%;
+    z-index: 2;
     background-image: url('../MyModelsResourceStack/drop_down.png');
-    background-size: contain;
-    background-repeat: no-repeat;
-    background-position: center;
 }
